Fixes broken layouts on phones.

--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,14 +1,13 @@
 .hero {
   background: linear-gradient(180deg, #a04ad9 0%, #2c2559 100%);
   color: var(--color-theme-highlight);
-  height: 40vh;
+  min-height: 40vh;
   display: flex;
   align-items: center;
 
   &__summary {
     --flow-space: #{get-size(500)};
     font-size: get-size(600);
-    margin-left: -30%;
 
     a {
       color: currentColor;
@@ -23,6 +22,5 @@
     max-width: 40ch;
     @include apply-utility('font', 'marker');
     font-size: get-size(900);
-    margin-left: -30%;
   }
 }
