--- a/src/scss/utilities/_inner-wrapper.scss
+++ b/src/scss/utilities/_inner-wrapper.scss
@@ -5,3 +5,11 @@
   padding-left: get-size(500);
   padding-right: get-size(500);
 }
+
+.inner-wrapper--large {
+  max-width: map-get($metrics, 'wrap-large-max-width');
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: get-size(500);
+  padding-right: get-size(500);
+}
